--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "@tanstack/react-router": "^1.45.11",
     "@tanstack/zod-form-adapter": "^0.26.4",
     "@xixixao/uploadstuff": "^0.0.5",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.13.2",
     "convex-helpers": "^0.1.50",
     "cookie": "^0.6.0",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
-    "lucide-react": "^0.416.0",
+    "lucide-react": "^0.468.0",
     "npm-run-all": "^4.1.5",
     "oslo": "^1.2.1",
     "react": "^18.3.1",
@@ -45,7 +46,7 @@
     "react-i18next": "^15.0.0",
     "resend": "^3.2.0",
     "stripe": "^16.6.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
