--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "npm-run-all": "^4.1.5",
     "oslo": "^1.2.1",
